[package]
license = "Apache-2.0"
name = "gnats"
version = "2.0.0"
edition = "2024"
description = "Predator-prey firefly swarm"
publish = false
autobins = false

[lib]
name = "screensaver_gnats"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
trance-api = { path = "../idle/trance-api" }
libc = "0.2"

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "idle-saver-gnats"
provides = "trance-plugin-gnats"
replaces = "trance-plugin-gnats"
conflicts = "trance-plugin-gnats (<< 2.0.0)"
maintainer = "idlescreen <jerydleuck@gmail.com>"
extended-description = "Predator-prey firefly swarm. Official IdleScreen (Trance) screensaver plugin."
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/libscreensaver_gnats.so", "usr/libexec/idle/screensavers/libscreensaver_gnats.so", "644"],
    ["assets/idlescreen-gnats.png", "usr/share/pixmaps/idlescreen-gnats.png", "644"]
]

[package.metadata.generate-rpm]
name = "idle-saver-gnats"
release = "1"
arch = "x86_64"
summary = "Predator-prey firefly swarm"
description = "Predator-prey firefly swarm"
license = "Apache-2.0"
assets = [
    { source = "target/release/libscreensaver_gnats.so", dest = "/usr/libexec/idle/screensavers/libscreensaver_gnats.so", mode = "644", user = "root", group = "root" },
    { source = "assets/idlescreen-gnats.png", dest = "/usr/share/pixmaps/idlescreen-gnats.png", mode = "644", user = "root", group = "root" }
]

[package.metadata.generate-rpm.requires]
idle = "*"

[package.metadata.generate-rpm.provides]
trance-plugin-gnats = "*"

[package.metadata.generate-rpm.obsoletes]
trance-plugin-gnats = "*"
